# highlight-terminal

./: .hgignore  README.md  highlight-terminal.cabal
samples/: code.hs  haskell.style  simple.style
src/: Highlight.hs  Main.hs  Rule.hs  Terminal.hs
test/: Main.hs
