name:           highlight-terminal
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         Mauro Rocchi

executable highlight-terminal
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   ansi-terminal,
                   regex-posix
  ghc-options:     -Wall -fno-warn-missing-signatures

library 
  build-depends:   
                   base >= 4,
                   ansi-terminal,
                   regex-posix,
                   regex-tdfa
  hs-source-dirs:  src
  ghc-options:     -Wall -fno-warn-missing-signatures
  exposed-modules: Highlight

test-suite highlight-terminal-test
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4,
                   HUnit >= 1.2 && < 2,
                   highlight-terminal
  hs-source-dirs:  test
  ghc-options:     -Wall -rtsopts -fno-warn-missing-signatures
  main-is:         Main.hs
